# Maestro-pro

./: .gitignore  FUTURE-IDEAS.md  NOTICE.md  README.md  UPGRADES.md  latest.json.template  package-lock.json  package.json
.sdd-briefs/: task-1-report.md  task-8-brief.md
.superpowers/launch/: DECISIONS.md  VERIFICATION.md  step1-2-report.md  step3-report.md  step4-report.md  step5-6-report.md
docs/: GCP-LTX-GUIDE.md  LAUNCH-POSTS.md  MCP-REGISTRY.md  MCP-TOOLS.md  PROGRESS.md  PUBLISH.md  STRATEGY.md  UPDATER-SETUP.md
docs/superpowers/: TOOL-SURFACE-AUDIT.md
landing/: index.html  pricing.html
public/: sample-audio.m4a
remotion/: render.mjs
remotion/src/: Root.tsx
scripts/: capture-window.ps1  make-latest-json.mjs  prepare-resources.mjs
skills/: catalog.json
skills/art-direction/: SKILL.md
skills/beat-sync-cutting/: SKILL.md
skills/broll-planner/: SKILL.md
skills/build-in-maestro/: SKILL.md
skills/caption-styles/: SKILL.md
skills/creative-director/: SKILL.md
skills/platform-delivery/: SKILL.md
skills/promo-ad/: SKILL.md
skills/viral-reel/: SKILL.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/agent/: agent.ts
src/audio/: previewAudio.ts  transcribe.ts  waveform.ts
src/compositor/: CanvasPreview.tsx  browserFrameSource.ts  draw.ts  textAnimator.ts
src/engine/: editEngine.ts
src/export/: fcpxml.ts
src/mcp/: env.ts  executor.ts  main.ts  server.ts  skills.ts  stdio.ts  toolDefs.ts
src/model/: layout.ts  transitions.ts
src/motion/: renderTitle.ts
(+68 files in other folders)
