[package]
name = "kaestral"
version = "1.0.0"
description = "Kaestral — the AI-operated video editor for Windows"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kaestral_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
